--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,3 +8,14 @@
     column-gap: 120px;
     position: relative;
 }
+
+.contentSigned::before{
+    content: '';
+    height: 100vh;
+    width: 400px;
+    background: url('./assets/background.svg') no-repeat;
+    background-size: cover;
+    position: absolute;
+    right: -115px;
+    top: 0;
+}
